@@ -11,7 +11,7 @@
 		$(FIG2DEV) -Lps -m 1.000000 -n $*.eps $< $*.eps
 
 .dia.eps:
-		$(DIA) -e $@ $<
+		$(DIA) -n -e $@ $<
 
 .gp.eps:
 		$(GNUPLOT) $<
