@@ -1,5 +1,5 @@
 EXTRA_DIST = eis_varlist.tex glide_varlist.tex glint_varlist.tex intro.tex paramfiles.tex varlist.tex drivers.tex  example.tex \
-             glide.tex glimmer_api.tex installation.tex ug.tex varlist.tex.in
+             glide.tex glimmer_api.tex installation.tex ug.tex varlist.tex.in glint.tex
 
 BUILT_SOURCES = glide_varlist.tex eis_varlist.tex glint_varlist.tex
 CLEANFILES = $(BUILT_SOURCES)
