@@ -105,70 +105,3 @@ $$ where $z^\ast$ is the vertical distance above the ELA. }\\
   \end{supertabular}
 \end{center}
 
-\newpage
-\subsection{GLINT Driver}
-\subsubsection{Configuration}
-\begin{center}
-  \tablefirsthead{%
-    \hline
-  }
-  \tablehead{%
-    \hline
-    \multicolumn{2}{|p{0.98\textwidth}|}{\emph{\small continued from previous page}}\\
-    \hline
-  }
-  \tabletail{%
-    \hline
-    \multicolumn{2}{|r|}{\emph{\small continued on next page}}\\
-    \hline}
-  \tablelasttail{\hline}
-  \begin{supertabular}{|l|p{11cm}|}
-%%%% 
-    \hline
-    \multicolumn{2}{|l|}{\texttt{[GLINT projection]}}\\
-    \hline
-    \multicolumn{2}{|p{0.98\textwidth}|}{Projection info}\\
-    \hline
-    \texttt{projection} & (integer) type of projection: 1 --- Lambert Equal Area, 2 --- Spherical polar, 3 --- Spherical stereographic (oblique), 4 --- Spherical stereographic (equatorial)\\
-    \texttt{lonc} & Longitide of projection centre (degrees east)\\
-    \texttt{latc} & Latitude of projection centre (degrees)\\
-    \texttt{cpx} & Local $x$-coordinate of projection centre (grid-points)\\
-    \texttt{cpy} & Local $y$-coordinate of projection centre (grid-points)\\
-    \texttt{std parallel} & \\
-    \hline
-%%%% 
-    \hline
-    \multicolumn{2}{|l|}{\texttt{[GLINT climate]}}\\
-    \hline
-    \multicolumn{2}{|p{0.98\textwidth}|}{GLINT climate parameterisation}\\
-    \hline
-    \texttt{temperature\_file} & \\
-    \texttt{artm\_mode} & {\raggedright
-      Method of calculation of surface air temperature:\\
-      \begin{tabular}{lp{10cm}}
-        0 & Linear function of surface elevation\\
-        1 & Cubic function of distance from domain centre\\
-        2 & Linear function of distance from domain centre\\
-        3 & Greenland conditions (function of surface elevation and latitude) including forcing\\
-        4 & Antarctic conditions (sea-level air temperature -- function of position)\\
-        5 & Uniform temperature, zero range (temperature set in \texttt{cons} namelist) \\
-        6 & Uniform temperature, corrected for height, zero range.\\
-        7 & Use large-scale temperature and range.\\
-      \end{tabular}}\\
-    \texttt{precip\_mode} & {\raggedright
-      Net accumulation: \\
-      \begin{tabular}{lp{10cm}}
-        0 & EISMINT moving margin \\
-        1 & PDD mass-balance model [recommended] \\
-        2 & Accumulation only\\
-      \end{tabular}}\\
-    \texttt{acab\_mode} & {\raggedright
-      Source of precipitation:\\
-      \begin{tabular}{lp{7cm}}
-        0 & Uniform precipitation rate (set internally at present)\\
-        1 & Use large-scale precipitation rate\\
-        2 & Use parameterization of \emph{Roe and Lindzen}\\
-      \end{tabular}}\\
-    \hline
-  \end{supertabular}
-\end{center}
