@@ -1,5 +1,5 @@
-graphics = glide.eps glimmer.eps
-EXTRA_DIST = glide.dia glimmer.dia $(graphics)
+graphics = glide.eps glimmer.eps glint_timesteps.eps
+EXTRA_DIST = glide.dia glimmer.dia glint_timesteps.dia $(graphics)
 BUILT_SOURCES = $(graphics)
 CLEANFILES = $(BUILT_SOURCES)
 include $(top_srcdir)/doc/make_doc.rules
