@@ -2,3 +2,4 @@
 \input{\dir/installation.tex}
 \input{\dir/glide.tex}
 \input{\dir/drivers.tex}
+\input{\dir/glint.tex}
